Thu Feb 15 03:18:15 2001  George Lebl <jirka@5z.com>

	* Release 2.0.98.1

Thu Feb 15 03:18:12 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Gnome.in, config/Failsafe.in,
	  config/gdm.conf.in, config/gnomerc.in:  Fix the autogeneration,
	  by including all the prefixes and by expanding the variables.
	  Idea stolen from GConf configure.in

Wed Feb 14 18:53:57 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Makefile.am: Apply patch from peter@ximian.com
	  (Peter Teichman), to generate config files from .in files during
	  configure time, rather then install time

	* gdm.spec.in: update for the above

Tue Feb 13 18:27:03 2001  George Lebl <jirka@5z.com>

	* daemon/display.c: Apply fix from "Matthias Clasen"
	  <Matthias.Clasen@poet.de> to make xmdcp work for him.  Also
	  massaged that function a bit further.  But it doesn't solve
	  my problems.

Mon Feb 12 02:18:39 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: remove a duplicate bindtextdomain foo, and remove
	  the default dialog pos is center thing since we explicitly set
	  this anyway.

Sun Feb 11 16:23:01 2001  George Lebl <jirka@5z.com>

	* Release 2.0.98

Sat Feb 10 18:05:39 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|h|glade): new update version of the configurator
	  from Lee Mallabone <lee@fonicmonkey.net> which makes it simpler to
	  do stuff.

Tue Feb 06 21:33:10 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/verify-pam.c: pam cleanup done when slave
	  exitting.

Sun Feb 04 16:23:30 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.*: Apply patch from Lee Mallabone <lee@fonicmonkey.net>
	  To add a development define for debugging, and change a bit of
	  the layout to be more consistent.

Sat Feb 03 19:42:01 2001  George Lebl <jirka@5z.com>

	* daemon/display.c, daemon/gdm.c:  Fix corruption of GSLists on exit

Sat Feb 03 18:24:10 2001  George Lebl <jirka@5z.com>

	* daemon/xmdcp.c: apply some changes found in the gdm debian