@@ -4,23 +4,59 @@
  * DO NOT compile it as part of your application.
  */
 
-gchar *s = N_("Executables");
-gchar *s = N_("Chooser binary: ");
-gchar *s = N_("Greeter binary: ");
-gchar *s = N_("Halt command: ");
-gchar *s = N_("Reboot command: ");
-gchar *s = N_("Directories");
-gchar *s = N_("Session directory: ");
-gchar *s = N_("PRE session scripts directory: ");
-gchar *s = N_("POST session scripts directory: ");
-gchar *s = N_("Logging directory: ");
-gchar *s = N_("Display initialization directory: ");
-gchar *s = N_("Miscelleaneous");
-gchar *s = N_("PID file: ");
-gchar *s = N_("Default $PATH: ");
-gchar *s = N_("Root $PATH: ");
-gchar *s = N_("Automatic Login: ");
 gchar *s = N_("GDM");
+gchar *s = N_("Security");
+gchar *s = N_("XDMCP");
+gchar *s = N_("User Interface");
+gchar *s = N_("Greeter");
+gchar *s = N_("Chooser");
+gchar *s = N_("Servers");
+gchar *s = N_("GDM Configuration Utility");
+gchar *s = N_("_Configuration");
+gchar *s = N_("Revert settings");
+gchar *s = N_("Apply");
+gchar *s = N_("Options");
+gchar *s = N_(" ");
+gchar *s = N_("basic_settings");
+gchar *s = N_("General Appearance");
+gchar *s = N_("Logo: ");
+gchar *s = N_("Select a log to be displayed during login");
+gchar *s = N_("Minimised Icon: ");
+gchar *s = N_("Select a GTK+ theme file (gtkrc)");
+gchar *s = N_("Gtk+ RC file: ");
+gchar *s = N_("Login appearance");
+gchar *s = N_("Greeter Look and Feel");
+gchar *s = N_("Show the 'system' menu, (for reboot, shutdown etc.)");
+gchar *s = N_("Quiver on failure");
+gchar *s = N_("Welcome to %n");
+gchar *s = N_("%n");
+gchar *s = N_("This is %n");
+gchar *s = N_("This is %n");
+gchar *s = N_("Default font: ");
+gchar *s = N_("Exclude these users: ");
+gchar *s = N_("Welcome message: ");
+gchar *s = N_("Pick a Font");
+gchar *s = N_("AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz");
+gchar *s = N_("Background Program: ");
+gchar *s = N_("Select a file containing Locale information");
+gchar *s = N_("Default locale: ");
+gchar *s = N_("Position");
+gchar *s = N_("Manually set position");
+gchar *s = N_("Lock position");
+gchar *s = N_("X position: ");
+gchar *s = N_("Y position: ");
+gchar *s = N_("Xinerama screen: ");
+gchar *s = N_("Login behaviour");
+gchar *s = N_("Face browser");
+gchar *s = N_("Show choosable user images (enable face browser)");
+gchar *s = N_("Default face image: ");
+gchar *s = N_("Global faces directory: ");
+gchar *s = N_("Maximum face width: ");
+gchar *s = N_("Select an image for users with no 'face'");
+gchar *s = N_("Choose the directory to search for faces");
+gchar *s = N_("Maximum face height: ");
+gchar *s = N_("Face browser");
+gchar *s = N_("expert");
 gchar *s = N_("Options");
 gchar *s = N_("Allow root to login with GDM");
 gchar *s = N_("Kill 'init' clients");
@@ -46,52 +82,6 @@ gchar *s = N_("Max pending indirect requests: ");
 gchar *s = N_("Maximum pending requests: ");
 gchar *s = N_("Listen on UDP port: ");
 gchar *s = N_("XDMCP");
-gchar *s = N_("General Appearance");
-gchar *s = N_("Gtk+ RC file: ");
-gchar *s = N_("Logo: ");
-gchar *s = N_("Select a GTK+ theme file (gtkrc)");
-gchar *s = N_("Minimised Icon: ");
-gchar *s = N_("Select a log to be displayed during login");
-gchar *s = N_("Greeter Look and Feel");
-gchar *s = N_("Show the 'system' menu, (for reboot, shutdown etc.)");
-gchar *s = N_("Quiver on failure");
-gchar *s = N_("Welcome to %n");
-gchar *s = N_("%n");
-gchar *s = N_("This is %n");
-gchar *s = N_("This is %n");
-gchar *s = N_("Default font: ");
-gchar *s = N_("Exclude these users: ");
-gchar *s = N_("Welcome message: ");
-gchar *s = N_("Pick a Font");
-gchar *s = N_("AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz");
-gchar *s = N_("Background Program: ");
-gchar *s = N_("Select a file containing Locale information");
-gchar *s = N_("Position");
-gchar *s = N_("Manually set position");
-gchar *s = N_("Lock position");
-gchar *s = N_("X position: ");
-gchar *s = N_("Y position: ");
-gchar *s = N_("Xinerama screen: ");
-gchar *s = N_("User Interface");
-gchar *s = N_("Face browser");
-gchar *s = N_("Show choosable user images (enable face browser)");
-gchar *s = N_("Default face image to use: ");
-gchar *s = N_("Global faces directory: ");
-gchar *s = N_("Maximum face width: ");
-gchar *s = N_("Select an image for users with no 'face'");
-gchar *s = N_("Choose the directory to search for faces");
-gchar *s = N_("Maximum face height: ");
-gchar *s = N_("Localization");
-gchar *s = N_("Select a file containing Locale information");
-gchar *s = N_("Locale file: ");
-gchar *s = N_("Default locale: ");
-gchar *s = N_("Greeter");
-gchar *s = N_("Appearance");
-gchar *s = N_("Directory for host images: ");
-gchar *s = N_("Default host image:");
-gchar *s = N_("Refresh");
-gchar *s = N_("Scan every 'x' seconds: ");
-gchar *s = N_("Chooser");
 gchar *s = N_("Server Definitions");
 gchar *s = N_("No.");
 gchar *s = N_("Path to X server");
@@ -100,4 +90,35 @@ gchar *s = N_("Edit Server");
 gchar *s = N_("Delete Server");
 gchar *s = N_("Debugging");
 gchar *s = N_("Enable debugging output");
-gchar *s = N_("Servers");
+gchar *s = N_("X-server setup");
+gchar *s = N_("system_setup");
+gchar *s = N_("Executables");
+gchar *s = N_("Chooser command: ");
+gchar *s = N_("Greeter command: ");
+gchar *s = N_("Halt command: ");
+gchar *s = N_("Reboot command: ");
+gchar *s = N_("Directories");
+gchar *s = N_("Session directory: ");
+gchar *s = N_("PRE session scripts directory: ");
+gchar *s = N_("POST session scripts directory: ");
+gchar *s = N_("Logging directory: ");
+gchar *s = N_("Display initialization directory: ");
+gchar *s = N_("Miscelleaneous");
+gchar *s = N_("PID file: ");
+gchar *s = N_("Paths");
+gchar *s = N_("Miscelleaneous");
+gchar *s = N_("Default $PATH: ");
+gchar *s = N_("Root $PATH: ");
+gchar *s = N_("Automatic Login: ");
+gchar *s = N_("Localization");
+gchar *s = N_("Select a file containing Locale information");
+gchar *s = N_("Locale file: ");
+gchar *s = N_("Environment");
+gchar *s = N_("Appearance");
+gchar *s = N_("Directory for host images: ");
+gchar *s = N_("Default host image:");
+gchar *s = N_("Refresh");
+gchar *s = N_("Scan every 'x' seconds: ");
+gchar *s = N_("Chooser");
+gchar *s = N_("(C) 2001 Lee Mallabone");
+gchar *s = N_("Configure the GNOME Display Manager");
