@@ -1,3 +1,9 @@
+Sat Feb 17 19:08:00 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmconfig.(c|glade): Patch from Lee to fix xdmcp options
+	  sensitivity, plus make the clist title passive and set it to
+	  browse selection mode.
+
 Thu Feb 15 03:18:15 2001  George Lebl <jirka@5z.com>
 
 	* Release 2.0.98.1
